--- a/TaskerClient/src/addresses/create.html
+++ b/TaskerClient/src/addresses/create.html
@@ -9,13 +9,37 @@
       <form method="post" submit.delegate="submit()">
 
         <div class="form-group">
-          <label class="control-label" for="AddressValue">AddressValue</label>
-          <!-- value.bind - bind this value to class variable -->
+          <label for="Country" class="control-label">Country</label>
           <input class="form-control" type="text"
-                 id="AddressValue" name="AddressValue" value.bind="Address.addressValue"/>
+                 id="Country" name="Country" value.bind="Address.Country"/>
         </div>
         <div class="form-group">
-          <input type="submit" value="Create" class="btn btn-primary"/>
+          <label asp-for="City" class="control-label">City</label>
+          <input class="form-control" type="text"
+                 id="City" name="City" value.bind="Address.City"/>
+        </div>
+        <div class="form-group">
+          <label asp-for="Street" class="control-label">Street</label>
+          <input class="form-control" type="text"
+                 id="Street" name="Street" value.bind="Address.Street"/>
+        </div>
+        <div class="form-group">
+          <label asp-for="HouseNumber" class="control-label">House Number</label>
+          <input class="form-control" type="text"
+                 id="HouseNumber" name="HouseNumber" value.bind="Address.HouseNumber"/>
+        </div>
+        <div class="form-group">
+          <label asp-for="UnitNumber" class="control-label">Unit Number</label>
+          <input class="form-control" type="text"
+                 id="UnitNumber" name="UnitNumber" value.bind="Address.UnitNumber"/>
+        </div>
+        <div class="form-group">
+          <label asp-for="PostalCode" class="control-label">Postal Code</label>
+          <input class="form-control" type="text"
+                 id="PostalCode" name="PostalCode" value.bind="Address.PostalCode"/>
+        </div>
+        <div class="form-group">
+          <input type="submit" value="Create" class="btn btn-primary" />
         </div>
       </form>
     </div>
