--- a/TaskerClient/src/hourlyrates/index.html
+++ b/TaskerClient/src/hourlyrates/index.html
@@ -14,6 +14,9 @@
       <th>
         Starting From
       </th>
+      <th>
+        Till
+      </th>
       <th></th>
     </tr>
     </thead>
@@ -27,6 +30,10 @@
       <td>
         <!-- string interpolation -->
         ${hourlyRate.Start}
+      </td>
+      <td>
+        <!-- string interpolation -->
+        ${hourlyRate.End}
       </td>
       <td>
         <!-- gdenerate links, based on routing table defined in main-router -->
