--- a/TaskerClient/src/invoices/create.html
+++ b/TaskerClient/src/invoices/create.html
@@ -9,13 +9,41 @@
       <form method="post" submit.delegate="submit()">
 
         <div class="form-group">
-          <label class="control-label" for="InvoiceValue">InvoiceValue</label>
-          <!-- value.bind - bind this value to class variable -->
+          <label asp-for="InvoiceNumber" class="control-label">Invoice Number</label>
           <input class="form-control" type="text"
-                 id="InvoiceValue" name="InvoiceValue" value.bind="Invoice.invoiceValue"/>
+                 id="InvoiceNumber" name="InvoiceNumber" value.bind="Invoice.InvoiceNumber"/>
         </div>
         <div class="form-group">
-          <input type="submit" value="Create" class="btn btn-primary"/>
+          <label asp-for="Date" class="control-label">Date</label>
+          <input class="form-control" type="text"
+                 id="Date" name="Date" value.bind="Invoice.Date"/>
+        </div>
+        <div class="form-group">
+          <label asp-for="TotalWithVAT" class="control-label">TotalWithVAT</label>
+          <input class="form-control" type="text"
+                 id="TotalWithVAT" name="TotalWithVAT" value.bind="Invoice.TotalWithVAT"/>
+        </div>
+        <div class="form-group">
+          <label asp-for="TotalWithoutVAT" class="control-label">TotalWithoutVAT</label>
+          <input class="form-control" type="text"
+                 id="TotalWithoutVAT" name="TotalWithoutVAT" value.bind="Invoice.TotalWithoutVAT"/>
+        </div>
+        <div class="form-group">
+          <label asp-for="VAT" class="control-label">VAT</label>
+          <input class="form-control" type="text"
+                 id="VAT" name="VAT" value.bind="Invoice.VAT"/>
+        </div>
+        <div class="form-group">
+          <label asp-for="Comment" class="control-label">Comment</label>
+          <input class="form-control" type="text"
+                 id="Comment" name="Comment" value.bind="Invoice.Comment"/>
+        </div>
+        <div class="form-group">
+          <label asp-for="Invoice.AppUserId" class="control-label"></label>
+          <select asp-for="Invoice.AppUserId" class ="form-control" asp-items="Model.AppUserSelectList"></select>
+        </div>
+        <div class="form-group">
+          <input type="submit" value="Create" class="btn btn-primary" />
         </div>
       </form>
     </div>
