--- a/TaskerClient/src/payments/create.html
+++ b/TaskerClient/src/payments/create.html
@@ -9,13 +9,36 @@
       <form method="post" submit.delegate="submit()">
 
         <div class="form-group">
-          <label class="control-label" for="PaymentValue">PaymentValue</label>
-          <!-- value.bind - bind this value to class variable -->
+          <label asp-for="MeansOfPayment" class="control-label">Means Of Payment</label>
           <input class="form-control" type="text"
-                 id="PaymentValue" name="PaymentValue" value.bind="Payment.paymentValue"/>
+                 id="MeansOfPayment" name="MeansOfPayment" value.bind="Payment.MeansOfPayment"/>
         </div>
         <div class="form-group">
-          <input type="submit" value="Create" class="btn btn-primary"/>
+          <label asp-for="PaymentCode" class="control-label">Payment Code</label>
+          <input class="form-control" type="text"
+                 id="PaymentCode" name="PaymentCode" value.bind="Payment.PaymentCode"/>
+        </div>
+        <div class="form-group">
+          <label asp-for="TimeOfPayment" class="control-label">Time Of Payment</label>
+          <input class="form-control" type="text"
+                 id="TimeOfPayment" name="TimeOfPayment" value.bind="Payment.TimeOfPayment"/>
+        </div>
+        <div class="form-group">
+          <label asp-for="Total" class="control-label">Total</label>
+          <input class="form-control" type="text"
+                 id="Total" name="Total" value.bind="Payment.Total"/>
+        </div>
+        <div class="form-group">
+          <label asp-for="Comment" class="control-label">Comment</label>
+          <input class="form-control" type="text"
+                 id="Comment" name="Comment" value.bind="Payment.Comment"/>
+        </div>
+        <div class="form-group">
+          <label asp-for="InvoiceId" class="control-label"></label>
+          <select asp-for="InvoiceId" class ="form-control" asp-items="Model.InvoiceSelectList"></select>
+        </div>
+        <div class="form-group">
+          <input type="submit" value="Create" class="btn btn-primary" />
         </div>
       </form>
     </div>
