--- a/TaskerClient/src/reviews/create.html
+++ b/TaskerClient/src/reviews/create.html
@@ -9,13 +9,25 @@
       <form method="post" submit.delegate="submit()">
 
         <div class="form-group">
-          <label class="control-label" for="ReviewValue">ReviewValue</label>
-          <!-- value.bind - bind this value to class variable -->
+          <label asp-for="Rating" class="control-label">Rating</label>
           <input class="form-control" type="text"
-                 id="ReviewValue" name="ReviewValue" value.bind="Review.reviewValue"/>
+                 id="Rating" name="Rating" value.bind="Review.Rating"/>
         </div>
         <div class="form-group">
-          <input type="submit" value="Create" class="btn btn-primary"/>
+          <label asp-for="ReviewComment" class="control-label">Review Comment</label>
+          <input class="form-control" type="text"
+                 id="ReviewComment" name="ReviewComment" value.bind="Review.ReviewComment"/>
+        </div>
+        <div class="form-group">
+          <label asp-for="ReviewGiverId" class="control-label"></label>
+          <select asp-for="ReviewGiverId" class ="form-control" asp-items="Model.ReviewGiverSelectList"></select>
+        </div>
+        <div class="form-group">
+          <label asp-for="ReviewReceiverId" class="control-label"></label>
+          <select asp-for="ReviewReceiverId" class ="form-control" asp-items="Model.ReviewReceiverSelectList"></select>
+        </div>
+        <div class="form-group">
+          <input type="submit" value="Create" class="btn btn-primary" />
         </div>
       </form>
     </div>
