--- a/TaskerClient/src/tasks/create.html
+++ b/TaskerClient/src/tasks/create.html
@@ -9,13 +9,36 @@
       <form method="post" submit.delegate="submit()">
 
         <div class="form-group">
-          <label class="control-label" for="TaskValue">TaskValue</label>
-          <!-- value.bind - bind this value to class variable -->
+          <label asp-for="TaskName" class="control-label">Task Title</label>
           <input class="form-control" type="text"
-                 id="TaskValue" name="TaskValue" value.bind="Task.taskValue"/>
+                 id="TaskName" name="TaskName" value.bind="TaskerTask.Description"/>
         </div>
         <div class="form-group">
-          <input type="submit" value="Create" class="btn btn-primary"/>
+          <label asp-for="Description" class="control-label">Description</label>
+          <input class="form-control" type="text"
+                 id="Description" name="Description" value.bind="TaskerTask.Description"/>
+        </div>
+        <div class="form-group">
+          <label asp-for="TimeEstimate" class="control-label">TimeEstimate</label>
+          <input class="form-control" type="text"
+                 id="TimeEstimate" name="TimeEstimate" value.bind="TaskerTask.TimeEstimate"/>
+        </div>
+        <div class="form-group">
+          <label asp-for="TaskerTask.TaskType" class="control-label"></label>
+          <select asp-for="TaskerTask.TaskType" class="form-control" asp-items="Html.GetEnumSelectList<TaskType>()"></select>
+          <span asp-validation-for="TaskerTask.TaskType" class="text-danger"></span>
+        </div>
+        <div class="form-group">
+          <label asp-for="TaskerTask.TaskStatus" class="control-label"></label>
+          <select asp-for="TaskerTask.TaskStatus" class="form-control" asp-items="Html.GetEnumSelectList<TaskStatus>()"></select>
+          <span asp-validation-for="TaskerTask.TaskStatus" class="text-danger"></span>
+        </div>
+        <div class="form-group">
+          <label asp-for="TaskerTask.AddressId" class="control-label"></label>
+          <select asp-for="TaskerTask.AddressId" class ="form-control" asp-items="Model.AddressSelectList"></select>
+        </div>
+        <div class="form-group">
+          <input type="submit" value="Create" class="btn btn-primary" />
         </div>
       </form>
     </div>
