--- a/TaskerClient/src/app.html
+++ b/TaskerClient/src/app.html
@@ -1,3 +1,61 @@
 <template>
-  <h1>${message}</h1>
+  <div class="carousel-subcategory">
+    <h2>Popular Services in Your Area</h2>
+    <div class="carousel-container">
+      <div class="row">
+        <div class="col-lg-12">
+
+          <div id="feedPhotoCarousel" class="carousel slide w-100" data-ride="carousel">
+            <div class="carousel-inner w-100" role="listbox">
+              <div class="carousel-item">
+                <div class="d-block col-3 content-item">
+                  <h4>Fix around house</h4>
+                  <img class="img-fluid" src="assets/builderOverlay.jpg">
+                </div>
+              </div>
+              <div class="carousel-item">
+                <div class="d-block col-3 content-item">
+                  <h4>Catering</h4>
+                  <img class="img-fluid" src="assets/cookingOverlay.jpg">
+                </div>
+              </div>
+              <div class="carousel-item active">
+                <div class="d-block col-3 content-item">
+                  <h4>Move boxes</h4>
+                  <img class="img-fluid" src="assets/deliveryOverlay.jpg">
+                </div>
+              </div>
+              <div class="carousel-item">
+                <div class="d-block col-3 content-item">
+                  <h4>Housekeeping</h4>
+                  <img class="img-fluid" src="assets/cleaningOverlay.jpg">
+                </div>
+              </div>
+              <div class="carousel-item">
+                <div class="d-block col-3 content-item">
+                  <h4>Gardening</h4>
+                  <img class="img-fluid" src="assets/gardenOverlay.jpg">
+                </div>
+              </div>
+              <div class="carousel-item">
+                <div class="d-block col-3 content-item">
+                  <h4>Painting</h4>
+                  <img class="img-fluid" src="assets/blue-brushOverlay.jpg">
+                </div>
+              </div>
+            </div>
+            <a class="carousel-control-prev" href="#feedPhotoCarousel" role="button" data-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#feedPhotoCarousel" role="button" data-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="sr-only">Next</span>
+            </a>
+          </div>
+
+        </div>
+      </div>
+    </div>
+  </div>
 </template>
