--- a/TaskerClient/src/home.html
+++ b/TaskerClient/src/home.html
@@ -1,3 +1,17 @@
 <template>
-  Home
+  <require from="./app"></require>
+
+  <div class="hero">
+    <h1>Helping hand at your door</h1>
+    <h4>Find affordable background checked Taskers for help around the house</h4>
+  </div>
+
+  <app>
+  
+  </app>
+
+  <div class="selling-proposition">
+
+  </div>
+  
 </template>
