--- a/TaskerClient/src/identity/register.html
+++ b/TaskerClient/src/identity/register.html
@@ -1,28 +1,46 @@
 <template>
-  <div class="row">
-    <div class="col-md-8">
-      <form method="post" submit.trigger="submit()">
-        <h4>Create a new account</h4>
-        <hr />
 
-        <div class="form-group">
-          <label for="email">Email</label>
-          <input class="form-control" type="email" id="email" name="email" value.bind="email" />
-        </div>
-        <div class="form-group">
-          <label for="password">Password</label>
-          <input class="form-control" type="password" id="password"  name="password"
-                 value.bind="password" />
-        </div>
-        <div class="form-group">
-          <label for="confirmPassword">Confirm password</label>
-          <input class="form-control" type="password" id="confirmPassword" name="confirmPassword"
-                 value.bind="confirmPassword" />
-        </div>
+  <section class="page__register">
 
-        <button type="submit" class="btn btn-primary">Register</button>
-      </form>
+    <div class="register__form">
+      <h1>Create a new account</h1>
+
+      <div class="row">
+        <div class="col-md-12">
+          <form method="post" submit.trigger="submit()">
+            <h4>Create an account to get started</h4>
+            <hr/>
+
+            <div class="form-group">
+              <label for="firstName">First Name</label>
+              <input class="form-control" type="firstName" id="firstName" name="firstName" 
+                     value.bind="firstName" />
+            </div>
+            <div class="form-group">
+              <label for="lastName">Last Name</label>
+              <input class="form-control" type="lastName" id="lastName" name="lastName" 
+                     value.bind="lastName" />
+            </div>
+            <div class="form-group">
+              <label for="email">Email</label>
+              <input class="form-control" type="email" id="email" name="email" value.bind="email" />
+            </div>
+            <div class="form-group">
+              <label for="password">Password</label>
+              <input class="form-control" type="password" id="password"  name="password"
+                     value.bind="password" />
+            </div>
+            <div class="form-group">
+              <label for="confirmPassword">Confirm password</label>
+              <input class="form-control" type="password" id="confirmPassword" name="confirmPassword"
+                     value.bind="confirmPassword" />
+            </div>
+            
+            <button type="submit" class="btn btn-primary">Register</button>
+          </form>
+        </div>
+      </div>
     </div>
-  </div>
+  </section>
 
 </template>
