--- a/TaskerClient/src/addresses/index.html
+++ b/TaskerClient/src/addresses/index.html
@@ -33,27 +33,27 @@
     <tr repeat.for="address of addresses">
       <td>
         <!-- string interpolation -->
-        ${address.Country}
+        ${address.country}
       </td>
       <td>
         <!-- string interpolation -->
-        ${address.City}
+        ${address.city}
       </td>
       <td>
         <!-- string interpolation -->
-        ${address.Street}
+        ${address.street}
       </td>
       <td>
         <!-- string interpolation -->
-        ${address.HouseNumber}
+        ${address.houseNumber}
       </td>
       <td>
         <!-- string interpolation -->
-        ${address.UnitNumber}
+        ${address.unitNumber}
       </td>
       <td>
         <!-- string interpolation -->
-        ${address.PostalCode}
+        ${address.postalCode}
       </td>
       <td>
         <!-- gdenerate links, based on routing table defined in main-router -->
