--- a/TaskerClient/src/hourlyrates/create.html
+++ b/TaskerClient/src/hourlyrates/create.html
@@ -11,17 +11,17 @@
         <div class="form-group">
           <label asp-for="HourRate" class="control-label">Hourly Rate</label>
           <input class="form-control" type="text"
-                 id="HourRate" name="HourRate" value.bind="HourlyRate.HourRate"/>
+                 id="HourRate" name="HourRate" value.bind="hourlyRate.HourRate"/>
         </div>
         <div class="form-group">
           <label asp-for="Start" class="control-label">Start</label>
           <input class="form-control" type="text"
-                 id="Start" name="Start" value.bind="HourlyRate.Start"/>
+                 id="Start" name="Start" value.bind="hourlyRate.Start"/>
         </div>
         <div class="form-group">
           <label asp-for="End" class="control-label">End</label>
           <input class="form-control" type="text"
-                 id="End" name="End" value.bind="HourlyRate.End"/>
+                 id="End" name="End" value.bind="hourlyRate.End"/>
         </div>
         <div class="form-group">
           <input type="submit" value="Create" class="btn btn-primary" />
