--- a/TaskerClient/src/hourlyrates/index.html
+++ b/TaskerClient/src/hourlyrates/index.html
@@ -25,15 +25,15 @@
     <tr repeat.for="hourlyRate of hourlyRates">
       <td>
         <!-- string interpolation -->
-        ${hourlyRate.HourRate}
+        ${hourlyRate.hourRate}
       </td>
       <td>
         <!-- string interpolation -->
-        ${hourlyRate.Start}
+        ${hourlyRate.start}
       </td>
       <td>
         <!-- string interpolation -->
-        ${hourlyRate.End}
+        ${hourlyRate.end}
       </td>
       <td>
         <!-- gdenerate links, based on routing table defined in main-router -->
