--- a/TaskerClient/src/identifications/create.html
+++ b/TaskerClient/src/identifications/create.html
@@ -11,7 +11,7 @@
         <div class="form-group">
           <label asp-for="DocNumber" class="control-label">Document Number</label>
           <input class="form-control" type="text"
-                 id="DocNumber" name="DocNumber" value.bind="Identification.DocNumber"/>
+                 id="DocNumber" name="DocNumber" value.bind="identification.DocNumber"/>
         </div>
         <div class="form-group">
           <label asp-for="IdentificationType" class="control-label">Identification Type</label>
@@ -20,17 +20,17 @@
         <div class="form-group">
           <label asp-for="Start" class="control-label">Start</label>
           <input class="form-control" type="text"
-                 id="Start" name="Start" value.bind="Identification.Start"/>
+                 id="Start" name="Start" value.bind="identification.Start"/>
         </div>
         <div class="form-group">
           <label asp-for="End" class="control-label">End</label>
           <input class="form-control" type="text"
-                 id="End" name="End" value.bind="Identification.End"/>
+                 id="End" name="End" value.bind="identification.End"/>
         </div>
         <div class="form-group">
           <label asp-for="Comment" class="control-label">Comment</label>
           <input class="form-control" type="text"
-                 id="Comment" name="Comment" value.bind="Identification.Comment"/>
+                 id="Comment" name="Comment" value.bind="identification.Comment"/>
         </div>
         <div class="form-group">
           <label asp-for="AppUserId" class="control-label">AppUser</label>
