--- a/TaskerClient/src/invoices/index.html
+++ b/TaskerClient/src/invoices/index.html
@@ -33,27 +33,27 @@
     <tr repeat.for="invoice of invoices">
       <td>
         <!-- string interpolation -->
-        ${invoice.InvoiceNumber}
+        ${invoice.invoiceNumber}
       </td>
       <td>
         <!-- string interpolation -->
-        ${invoice.Date}
+        ${invoice.date}
       </td>
       <td>
         <!-- string interpolation -->
-        ${invoice.TotalWithVAT}
+        ${invoice.totalWithVAT}
       </td>
       <td>
         <!-- string interpolation -->
-        ${invoice.TotalWithoutVAT}
+        ${invoice.totalWithoutVAT}
       </td>
       <td>
         <!-- string interpolation -->
-        ${invoice.VAT}
+        ${invoice.vat}
       </td>
       <td>
         <!-- string interpolation -->
-        ${invoice.Comment}
+        ${invoice.comment}
       </td>
       <td>
         <!-- gdenerate links, based on routing table defined in main-router -->
