--- a/TaskerClient/src/payments/create.html
+++ b/TaskerClient/src/payments/create.html
@@ -11,27 +11,27 @@
         <div class="form-group">
           <label asp-for="MeansOfPayment" class="control-label">Means Of Payment</label>
           <input class="form-control" type="text"
-                 id="MeansOfPayment" name="MeansOfPayment" value.bind="Payment.MeansOfPayment"/>
+                 id="MeansOfPayment" name="MeansOfPayment" value.bind="payment.MeansOfPayment"/>
         </div>
         <div class="form-group">
           <label asp-for="PaymentCode" class="control-label">Payment Code</label>
           <input class="form-control" type="text"
-                 id="PaymentCode" name="PaymentCode" value.bind="Payment.PaymentCode"/>
+                 id="PaymentCode" name="PaymentCode" value.bind="payment.PaymentCode"/>
         </div>
         <div class="form-group">
           <label asp-for="TimeOfPayment" class="control-label">Time Of Payment</label>
           <input class="form-control" type="text"
-                 id="TimeOfPayment" name="TimeOfPayment" value.bind="Payment.TimeOfPayment"/>
+                 id="TimeOfPayment" name="TimeOfPayment" value.bind="payment.TimeOfPayment"/>
         </div>
         <div class="form-group">
           <label asp-for="Total" class="control-label">Total</label>
           <input class="form-control" type="text"
-                 id="Total" name="Total" value.bind="Payment.Total"/>
+                 id="Total" name="Total" value.bind="payment.Total"/>
         </div>
         <div class="form-group">
           <label asp-for="Comment" class="control-label">Comment</label>
           <input class="form-control" type="text"
-                 id="Comment" name="Comment" value.bind="Payment.Comment"/>
+                 id="Comment" name="Comment" value.bind="payment.Comment"/>
         </div>
         <div class="form-group">
           <label asp-for="InvoiceId" class="control-label"></label>
