--- a/TaskerClient/src/reviews/create.html
+++ b/TaskerClient/src/reviews/create.html
@@ -11,12 +11,12 @@
         <div class="form-group">
           <label asp-for="Rating" class="control-label">Rating</label>
           <input class="form-control" type="text"
-                 id="Rating" name="Rating" value.bind="Review.Rating"/>
+                 id="Rating" name="Rating" value.bind="review.Rating"/>
         </div>
         <div class="form-group">
           <label asp-for="ReviewComment" class="control-label">Review Comment</label>
           <input class="form-control" type="text"
-                 id="ReviewComment" name="ReviewComment" value.bind="Review.ReviewComment"/>
+                 id="ReviewComment" name="ReviewComment" value.bind="review.ReviewComment"/>
         </div>
         <div class="form-group">
           <label asp-for="ReviewGiverId" class="control-label"></label>
