--- a/TaskerClient/src/reviews/index.html
+++ b/TaskerClient/src/reviews/index.html
@@ -22,11 +22,11 @@
     <tr repeat.for="review of reviews">
       <td>
         <!-- string interpolation -->
-        ${review.Rating}
+        ${review.rating}
       </td>
       <td>
         <!-- string interpolation -->
-        ${review.Comment}
+        ${review.reviewComment}
       </td>
       <td>
         <!-- gdenerate links, based on routing table defined in main-router -->
