--- a/TaskerClient/src/tasks/create.html
+++ b/TaskerClient/src/tasks/create.html
@@ -11,17 +11,17 @@
         <div class="form-group">
           <label asp-for="TaskName" class="control-label">Task Title</label>
           <input class="form-control" type="text"
-                 id="TaskName" name="TaskName" value.bind="TaskerTask.Description"/>
+                 id="TaskName" name="TaskName" value.bind="task.Description"/>
         </div>
         <div class="form-group">
           <label asp-for="Description" class="control-label">Description</label>
           <input class="form-control" type="text"
-                 id="Description" name="Description" value.bind="TaskerTask.Description"/>
+                 id="Description" name="Description" value.bind="task.Description"/>
         </div>
         <div class="form-group">
           <label asp-for="TimeEstimate" class="control-label">TimeEstimate</label>
           <input class="form-control" type="text"
-                 id="TimeEstimate" name="TimeEstimate" value.bind="TaskerTask.TimeEstimate"/>
+                 id="TimeEstimate" name="TimeEstimate" value.bind="task.TimeEstimate"/>
         </div>
         <div class="form-group">
           <label asp-for="TaskerTask.TaskType" class="control-label"></label>
