--- a/TaskerClient/src/addresses/edit.html
+++ b/TaskerClient/src/addresses/edit.html
@@ -9,7 +9,7 @@
       <form method="post" submit.delegate="submit()">
 
         <div class="form-group">
-          <label class="control-label" for="AddressValue">AddressValue</label>
+          <label class="control-label" asp-for="AddressValue">AddressValue</label>
           <input class="form-control" type="text" value.bind="address.AddressValue" />
         </div>
         <div class="form-group">
