--- a/TaskerClient/src/how-it-works.html
+++ b/TaskerClient/src/how-it-works.html
@@ -54,7 +54,7 @@
                 <div class='col-11'>
                   <div class='how-it-works__step-name'>Get It Done</div>
                 </div>
-                <div class='col-12 how-it-works__step-description'>Your Tasker arrives and gets the job done. Pay securely and leave a review, all through TaskRabbit.</div>
+                <div class='col-12 how-it-works__step-description'>Your Tasker arrives and gets the job done. Pay securely and leave a review, all through Tasker.</div>
               </div>
             </div>
           </div>
