--- a/TaskerClient/src/invoices/create.html
+++ b/TaskerClient/src/invoices/create.html
@@ -11,32 +11,32 @@
         <div class="form-group">
           <label asp-for="InvoiceNumber" class="control-label">Invoice Number</label>
           <input class="form-control" type="text"
-                 id="InvoiceNumber" name="InvoiceNumber" value.bind="Invoice.InvoiceNumber"/>
+                 id="InvoiceNumber" name="InvoiceNumber" value.bind="invoice.InvoiceNumber"/>
         </div>
         <div class="form-group">
           <label asp-for="Date" class="control-label">Date</label>
           <input class="form-control" type="text"
-                 id="Date" name="Date" value.bind="Invoice.Date"/>
+                 id="Date" name="Date" value.bind="invoice.Date"/>
         </div>
         <div class="form-group">
           <label asp-for="TotalWithVAT" class="control-label">TotalWithVAT</label>
           <input class="form-control" type="text"
-                 id="TotalWithVAT" name="TotalWithVAT" value.bind="Invoice.TotalWithVAT"/>
+                 id="TotalWithVAT" name="TotalWithVAT" value.bind="invoice.TotalWithVAT"/>
         </div>
         <div class="form-group">
           <label asp-for="TotalWithoutVAT" class="control-label">TotalWithoutVAT</label>
           <input class="form-control" type="text"
-                 id="TotalWithoutVAT" name="TotalWithoutVAT" value.bind="Invoice.TotalWithoutVAT"/>
+                 id="TotalWithoutVAT" name="TotalWithoutVAT" value.bind="invoice.TotalWithoutVAT"/>
         </div>
         <div class="form-group">
           <label asp-for="VAT" class="control-label">VAT</label>
           <input class="form-control" type="text"
-                 id="VAT" name="VAT" value.bind="Invoice.VAT"/>
+                 id="VAT" name="VAT" value.bind="invoice.VAT"/>
         </div>
         <div class="form-group">
           <label asp-for="Comment" class="control-label">Comment</label>
           <input class="form-control" type="text"
-                 id="Comment" name="Comment" value.bind="Invoice.Comment"/>
+                 id="Comment" name="Comment" value.bind="invoice.Comment"/>
         </div>
         <div class="form-group">
           <label asp-for="Invoice.AppUserId" class="control-label"></label>
