--- a/TaskerClient/src/main-router.html
+++ b/TaskerClient/src/main-router.html
@@ -50,7 +50,7 @@
           <a class="nav-link" id="register"  route-href="route: identityRegister">Become a Tasker</a>
         </li>
         <li class="nav-item" show.bind="appConfig.jwt != null">
-          <a class="nav-link text-dark" route-href="route: identityLogout">Logout</a>
+          <a class="nav-link" route-href="route: identityLogout">Logout</a>
         </li>
       </ul>    
     </nav>
