--- a/TaskerClient/src/skills/create.html
+++ b/TaskerClient/src/skills/create.html
@@ -11,12 +11,12 @@
         <div class="form-group">
           <label asp-for="SkillName" class="control-label">Skill</label>
           <input class="form-control" type="text"
-                 id="SkillName" name="SkillName" value.bind="Skill.SkillName"/>
+                 id="SkillName" name="SkillName" value.bind="skill.SkillName"/>
         </div>
         <div class="form-group">
           <label asp-for="Description" class="control-label">Description</label>
           <input class="form-control" type="text"
-                 id="Description" name="Description" value.bind="Skill.Description"/>
+                 id="Description" name="Description" value.bind="skill.Description"/>
         </div>
         <div class="form-group">
           <label asp-for="Category" class="control-label"></label>
