--- a/TaskerClient/src/skills/index.html
+++ b/TaskerClient/src/skills/index.html
@@ -3,7 +3,7 @@
   <h1>Skills - Index</h1>
 
   <p>
-    <a route-href="route: killsCreate">Skills - Create New</a>
+    <a route-href="route: skillsCreate">Skills - Create New</a>
   </p>
   <table class="table">
     <thead>
@@ -24,15 +24,15 @@
     <tr repeat.for="skill of skills">
       <td>
         <!-- string interpolation -->
-        ${skill.SkillName}
+        ${skill.skillName}
       </td>
       <td>
         <!-- string interpolation -->
-        ${skill.Description}
+        ${skill.description}
       </td>
       <td>
         <!-- string interpolation -->
-        ${skill.Category}
+        ${skill.category}
       </td>
       <td>
         <!-- gdenerate links, based on routing table defined in main-router -->
