--- a/TaskerClient/src/carousel.html
+++ b/TaskerClient/src/carousel.html
@@ -1,13 +1,12 @@
 <template>
   <require from="bootstrap/dist/css/bootstrap.min.css"></require>
-
   <div class="carousel-subcategory">
     <h2>Popular Services in Your Area</h2>
     <div class="carousel-container">
       <div class="row">
         <div class="col-lg-12">
 
-          <div id="feedPhotoCarousel" class="carousel slide w-100" data-ride="carousel">
+          <div ref="carousel" id="feedPhotoCarousel" class="carousel slide w-100" data-ride="carousel">
             <div class="carousel-inner w-100" role="listbox">
               <div class="carousel-item">
                 <div class="d-block col-3 content-item">
@@ -60,4 +59,5 @@
       </div>
     </div>
   </div>
+
 </template>
